--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,13 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok'
 
+	testCompileOnly 'org.projectlombok:lombok'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	annotationProcessor 'org.projectlombok:lombok'
+
+	testAnnotationProcessor 'org.projectlombok:lombok'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
